--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,13 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    
+    
+    <!-- google api http -->
+    <script type="text/javascript"
+         src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyBlll5Z7sjk9L8SGRP4fxE3w1IV9m-pH_k">
+        </script>    
+
 
   <!-- cordova.js required for cordova apps (remove if not needed) -->
   <script src="cordova.js"></script>
