Beta version Done

--- a/src/pages/appointment-services/appointment-services.html
+++ b/src/pages/appointment-services/appointment-services.html
@@ -7,7 +7,14 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>AppointmentServices</ion-title>
+    <ion-title>Appointment Services</ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only  (click)="profile()"> 
+        <ion-icon ios="ios-contact" md="md-contact"></ion-icon>
+       
+      </button>
+    </ion-buttons>
+
   </ion-navbar>
 
 </ion-header>
